fix again modals not showing

--- a/css/creative.css
+++ b/css/creative.css
@@ -527,3 +527,11 @@ p.text-small {
     display:inline-block;
     margin-right: 10px;
 }
+
+.modal {
+    position: fixed;
+    top: 3%;
+    left: 2%;
+    right: 2%;
+    bottom: 3%;
+}
